; ModuleID = '/home/carl/AnghaBench/linux/drivers/mtd/nand/raw/extr_stm32_fmc2_nand.c_stm32_fmc2_sequencer_write.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mtd/nand/raw/extr_stm32_fmc2_nand.c_stm32_fmc2_sequencer_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nand_chip = type { i32 }
%struct.mtd_info = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.nand_chip*, i32*, i32, i32, i32)* @stm32_fmc2_sequencer_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @stm32_fmc2_sequencer_write(%struct.nand_chip* %0, i32* %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.nand_chip*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca %struct.mtd_info*, align 8
  %13 = alloca i32, align 4
  store %struct.nand_chip* %0, %struct.nand_chip** %7, align 8
  store i32* %1, i32** %8, align 8
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  %14 = load %struct.nand_chip*, %struct.nand_chip** %7, align 8
  %15 = call %struct.mtd_info* @nand_to_mtd(%struct.nand_chip* %14)
  store %struct.mtd_info* %15, %struct.mtd_info** %12, align 8
  %16 = load %struct.nand_chip*, %struct.nand_chip** %7, align 8
  %17 = load i32, i32* %10, align 4
  %18 = load i32, i32* %11, align 4
  %19 = call i32 @stm32_fmc2_rw_page_init(%struct.nand_chip* %16, i32 %17, i32 %18, i32 1)
  %20 = load %struct.nand_chip*, %struct.nand_chip** %7, align 8
  %21 = load i32*, i32** %8, align 8
  %22 = load i32, i32* %11, align 4
  %23 = call i32 @stm32_fmc2_xfer(%struct.nand_chip* %20, i32* %21, i32 %22, i32 1)
  store i32 %23, i32* %13, align 4
  %24 = load i32, i32* %13, align 4
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %26, label %28

26:                                               ; preds = %5
  %27 = load i32, i32* %13, align 4
  store i32 %27, i32* %6, align 4
  br label %51

28:                                               ; preds = %5
  %29 = load i32, i32* %9, align 4
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %31, label %48

31:                                               ; preds = %28
  %32 = load %struct.nand_chip*, %struct.nand_chip** %7, align 8
  %33 = load %struct.mtd_info*, %struct.mtd_info** %12, align 8
  %34 = getelementptr inbounds %struct.mtd_info, %struct.mtd_info* %33, i32 0, i32 1
  %35 = load i32, i32* %34, align 4
  %36 = load %struct.nand_chip*, %struct.nand_chip** %7, align 8
  %37 = getelementptr inbounds %struct.nand_chip, %struct.nand_chip* %36, i32 0, i32 0
  %38 = load i32, i32* %37, align 4
  %39 = load %struct.mtd_info*, %struct.mtd_info** %12, align 8
  %40 = getelementptr inbounds %struct.mtd_info, %struct.mtd_info* %39, i32 0, i32 0
  %41 = load i32, i32* %40, align 4
  %42 = call i32 @nand_change_write_column_op(%struct.nand_chip* %32, i32 %35, i32 %38, i32 %41, i32 0)
  store i32 %42, i32* %13, align 4
  %43 = load i32, i32* %13, align 4
  %44 = icmp ne i32 %43, 0
  br i1 %44, label %45, label %47

45:                                               ; preds = %31
  %46 = load i32, i32* %13, align 4
  store i32 %46, i32* %6, align 4
  br label %51

47:                                               ; preds = %31
  br label %48

48:                                               ; preds = %47, %28
  %49 = load %struct.nand_chip*, %struct.nand_chip** %7, align 8
  %50 = call i32 @nand_prog_page_end_op(%struct.nand_chip* %49)
  store i32 %50, i32* %6, align 4
  br label %51

51:                                               ; preds = %48, %45, %26
  %52 = load i32, i32* %6, align 4
  ret i32 %52
}

declare dso_local %struct.mtd_info* @nand_to_mtd(%struct.nand_chip*) #1

declare dso_local i32 @stm32_fmc2_rw_page_init(%struct.nand_chip*, i32, i32, i32) #1

declare dso_local i32 @stm32_fmc2_xfer(%struct.nand_chip*, i32*, i32, i32) #1

declare dso_local i32 @nand_change_write_column_op(%struct.nand_chip*, i32, i32, i32, i32) #1

declare dso_local i32 @nand_prog_page_end_op(%struct.nand_chip*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
